--- a/manifest.json
+++ b/manifest.json
@@ -9,9 +9,9 @@
       }
     ],
     "start_url": "https://rtemiy.github.io/bloody_trail/gitindex.html",
-    "background_color": "#cccc00",
+    "background_color": "#0d5377",
     "display": "standalone",
     "scope": "/",
-    "theme_color": "#cccc00"
+    "theme_color": "#0d5377"
 }
     
